--- a/src/components/Main/main.module.scss
+++ b/src/components/Main/main.module.scss
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   margin: auto;
+  padding: 10px;
 
   .time {
     font-size: 50px;
@@ -12,9 +14,9 @@
   .currentNumber {
     font-size: 1rem;
     margin: 10px 0;
-    width: 50px;
+    min-width: 50px;
     text-align: center;
-    padding: 8px 0;
+    padding: 8px;
   }
 
   .box {
@@ -40,9 +42,6 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-
-      .reset {
-      }
     }
   }
 
@@ -53,5 +52,12 @@
     border: 0;
     padding: 20px 0;
     margin: 0;
+  }
+
+  .leaderboardContainer {
+    margin: 40px 0 0;
+    text-align: center;
+    font-size: 20px;
+    width: 100%;
   }
 }
