--- a/src/components/Leaderboard/leaderboard.module.scss
+++ b/src/components/Leaderboard/leaderboard.module.scss
@@ -1,5 +1,13 @@
 @import '../../styles/variables.module.scss';
 
+.leaderboardContainer {
+  text-align: center;
+  font-size: 20px;
+  width: 100%;
+  max-width: 400px;
+  margin: 40px auto;
+}
+
 .table {
   width: 100%;
   height: 100%;
